fix overflow in the image.

--- a/src/pages/mainPage/MainPage.css
+++ b/src/pages/mainPage/MainPage.css
@@ -138,7 +138,7 @@
       #wrapper-left {
             width: 100%;
             height: 50vh;
-            overflow: hidden;
+            /* overflow: hidden; */
             flex-shrink: 0;
             background-position-y: -185px;
       }
